fix: logo padding on mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,3 +3,9 @@
   padding: 0;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
+
+@media screen and (max-width: 424px) {
+  .header {
+    padding: 0 27px 0;
+  }
+}
